// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing for UI Checks that HistoryScreen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "date": "2019-10-21",
          "descript": "Coopenhagen dump 2019-10-21",
          "docketNo": "1337",
          "id": "bd7acbea-c1b1-46c2-aed5-3ad53abb28ba",
          "site": "coopenhagen dump West, 73382",
          "title": "First Item",
        },
        Object {
          "date": "2019-10-21",
          "descript": "Karlstad dump 2019-10-21",
          "docketNo": "1337420",
          "id": "3ac68afc-c605-48d3-a4f8-fbd91aa97f63",
          "site": "Karlstad dump",
          "title": "Second Item",
        },
        Object {
          "date": "2019-10-21",
          "descript": "Linköping dump 2019-10-21",
          "docketNo": "54836",
          "id": "58694a0f-3da1-471f-bd96-145571e29d72",
          "site": "Linköping dump",
          "title": "Third Item",
        },
        Object {
          "date": "2019-10-21",
          "descript": "Coolest trashpalace 2019-10-21",
          "docketNo": "1337",
          "id": "bd7acbea-c1b1-46c2-aed5-3ad53abb28baa",
          "site": "Coolest trashpalace",
          "title": "First Item",
        },
        Object {
          "date": "2019-10-21",
          "descript": "Karlstad dump 2019-10-21",
          "docketNo": "1337",
          "id": "3ac68afc-c605-48d3-a4f8-fbd91aa97f6a3",
          "site": "coopenhagen dump West, 73382",
          "title": "Second Item",
        },
        Object {
          "date": "2019-10-21",
          "descript": "Linköping dump 2019-10-21",
          "docketNo": "1337",
          "id": "58694a0f-3da1-471f-bd96-145571e29d7a2",
          "site": "coopenhagen dump West, 73382",
          "title": "Third Item",
        },
      ]
    }
    disableVirtualization={false}
    extraData={null}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#00958F",
              "marginHorizontal": 4,
              "marginVertical": 4,
              "opacity": 1,
              "padding": 40,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 32,
                },
                Object {
                  "color": "black",
                },
              ]
            }
          >
            First Item
          </Text>
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Coopenhagen dump 2019-10-21
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#00958F",
              "marginHorizontal": 4,
              "marginVertical": 4,
              "opacity": 1,
              "padding": 40,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 32,
                },
                Object {
                  "color": "black",
                },
              ]
            }
          >
            Second Item
          </Text>
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Karlstad dump 2019-10-21
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#00958F",
              "marginHorizontal": 4,
              "marginVertical": 4,
              "opacity": 1,
              "padding": 40,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 32,
                },
                Object {
                  "color": "black",
                },
              ]
            }
          >
            Third Item
          </Text>
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Linköping dump 2019-10-21
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#00958F",
              "marginHorizontal": 4,
              "marginVertical": 4,
              "opacity": 1,
              "padding": 40,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 32,
                },
                Object {
                  "color": "black",
                },
              ]
            }
          >
            First Item
          </Text>
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Coolest trashpalace 2019-10-21
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#00958F",
              "marginHorizontal": 4,
              "marginVertical": 4,
              "opacity": 1,
              "padding": 40,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 32,
                },
                Object {
                  "color": "black",
                },
              ]
            }
          >
            Second Item
          </Text>
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Karlstad dump 2019-10-21
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#00958F",
              "marginHorizontal": 4,
              "marginVertical": 4,
              "opacity": 1,
              "padding": 40,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 32,
                },
                Object {
                  "color": "black",
                },
              ]
            }
          >
            Third Item
          </Text>
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            Linköping dump 2019-10-21
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Snapshot testing for UI Checks that HomeScreen renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#27ae60",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "padding": 60,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#2980b9",
          "borderColor": "grey",
          "borderRadius": 25,
          "borderWidth": 3,
          "marginBottom": 50,
          "marginLeft": 5,
          "marginRight": 5,
          "opacity": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 40,
            "height": 100,
            "textAlign": "center",
            "top": 20,
          }
        }
      >
        New Report
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#2980b9",
          "borderColor": "grey",
          "borderRadius": 25,
          "borderWidth": 3,
          "marginBottom": 50,
          "marginLeft": 5,
          "marginRight": 5,
          "opacity": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 40,
            "height": 100,
            "textAlign": "center",
            "top": 20,
          }
        }
      >
        History
      </Text>
    </View>
  </View>
</View>
`;

exports[`Snapshot testing for UI Checks that IncrementPercentTestScreen renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#E5E5E5",
        "borderRadius": 10,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginVertical": 1,
        "opacity": 1,
        "padding": "1%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 32,
            "padding": 5,
          }
        }
      >
        HEEEEEE
      </Text>
      <Text
        style={
          Object {
            "fontSize": 32,
            "padding": 5,
          }
        }
      >
        0
         %
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginLeft": "3%",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#E5E5E5",
            "borderRadius": 5,
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "margin": "1%",
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "flex": 1,
              "fontSize": 32,
            }
          }
        >
          -
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#E5E5E5",
            "borderRadius": 5,
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "margin": "1%",
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "flex": 1,
              "fontSize": 32,
            }
          }
        >
          +
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#E5E5E5",
        "borderRadius": 10,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginVertical": 1,
        "opacity": 1,
        "padding": "1%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 32,
            "padding": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "fontSize": 32,
            "padding": 5,
          }
        }
      >
        0
         %
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginLeft": "3%",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#E5E5E5",
            "borderRadius": 5,
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "margin": "1%",
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "flex": 1,
              "fontSize": 32,
            }
          }
        >
          -
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#E5E5E5",
            "borderRadius": 5,
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "margin": "1%",
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "flex": 1,
              "fontSize": 32,
            }
          }
        >
          +
        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#E5E5E5",
        "borderRadius": 10,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginVertical": 1,
        "opacity": 1,
        "padding": "1%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 32,
            "padding": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "fontSize": 32,
            "padding": 5,
          }
        }
      >
        0
         %
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginLeft": "3%",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#E5E5E5",
            "borderRadius": 5,
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "margin": "1%",
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "flex": 1,
              "fontSize": 32,
            }
          }
        >
          -
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#E5E5E5",
            "borderRadius": 5,
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "margin": "1%",
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "flex": 1,
              "fontSize": 32,
            }
          }
        >
          +
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Snapshot testing for UI Checks that LoginScreen renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#27ae60",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexGrow": 1,
        "justifyContent": "center",
        "top": 0,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/Screens/Screen_images/EcCell_cropped.png",
        }
      }
      style={
        Object {
          "height": 130,
          "width": 130,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#FFFF",
          "fontSize": 40,
          "opacity": 0.8,
        }
      }
    >
      Ready to report!
    </Text>
  </View>
  <View
    style={
      Object {
        "padding": 30,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Username"
      placeholderTextColor="lightgray"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "fontSize": 16,
          "height": 40,
          "marginBottom": 40,
        }
      }
      underlineColorAndroid="transparent"
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="lightgray"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "fontSize": 16,
          "height": 40,
          "marginBottom": 40,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#2980b9",
          "borderColor": "grey",
          "borderRadius": 50,
          "borderWidth": 3,
          "marginLeft": 5,
          "marginRight": 5,
          "opacity": 1,
          "paddingVertical": 10,
        }
      }
      testID="SignInButton"
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 40,
            "height": 100,
            "textAlign": "center",
            "top": 20,
          }
        }
      >
        LOGIN
      </Text>
    </View>
  </View>
</View>
`;

exports[`Snapshot testing for UI Checks that MaterialScreen renders correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#27ae60",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#27ae60",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#27ae60",
          "flex": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/Screens/Screen_images/EcCell_cropped.png",
          }
        }
        style={
          Object {
            "height": 100,
            "marginTop": 10,
            "width": 100,
          }
        }
      />
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
            "marginTop": 10,
          }
        }
      >
         
        Input 100%, then you can submit!
         
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 3,
          "borderColor": "black",
          "borderTopWidth": 3,
          "flex": 3,
        }
      }
    >
      <RCTScrollView
        data={
          Array [
            Object {
              "id": "bd7acbea-c1b1-46c2-aed5-3ad53abb28ba",
              "percent": "10%",
              "title": "Concrete",
            },
            Object {
              "id": "3ac68afc-c605-48d3-a4f8-fbd91aa97f63",
              "percent": "20%",
              "title": "Wood",
            },
            Object {
              "id": "58694a0f-3da1-471f-bd96-145571e29d72",
              "percent": "30%",
              "title": "Plastic",
            },
            Object {
              "id": "bd7acbea-c1b1-46c2-aed5-3ad53abb28aba",
              "percent": "10%",
              "title": "Steel",
            },
            Object {
              "id": "3ac68afc-c605-48d3-a4f8-fbd91aa97f6a3",
              "percent": "10%",
              "title": "Magnetic",
            },
            Object {
              "id": "58694a0f-3da1-471f-bd96-145571e29d72a",
              "percent": "10%",
              "title": "Wool",
            },
            Object {
              "id": "bd7acbea-c1b1-46c2-aed5-3ad53abb28abaa",
              "percent": "10%",
              "title": "Carbon",
            },
            Object {
              "id": "3ac68afc-c605-48d3-a4f8-fbd91aa97f6aa3",
              "percent": "10%",
              "title": "Radioactive",
            },
            Object {
              "id": "58694a0f-3da1-471f-bd96-145571e29d72aa",
              "percent": "10%",
              "title": "Glass",
            },
            Object {
              "id": "bd7acbea-c1b1-46c2-aed5-3ad53absb28ba",
              "percent": "10%",
              "title": "Concrete",
            },
            Object {
              "id": "3ac68afc-c605-48d3-a4f8-fbd91aa9s7f63",
              "percent": "20%",
              "title": "Wood",
            },
            Object {
              "id": "58694a0f-3da1-471f-bd96-145571e2s9d72",
              "percent": "30%",
              "title": "Plastic",
            },
            Object {
              "id": "bd7acbea-c1b1-46c2-aed5-3ad53abb2s8aba",
              "percent": "10%",
              "title": "Steel",
            },
            Object {
              "id": "3ac68afc-c605-48d3-a4f8-fbd91aa9s7f6a3",
              "percent": "10%",
              "title": "Magnetic",
            },
            Object {
              "id": "58694a0f-3da1-471f-bd96-145571e2s9d72a",
              "percent": "10%",
              "title": "Wool",
            },
            Object {
              "id": "bd7acbea-c1b1-46c2-aed5-3ad53absb28abaa",
              "percent": "10%",
              "title": "Carbon",
            },
            Object {
              "id": "3ac68afc-c605-48d3-a4f8-fbd91aas97f6aa3",
              "percent": "10%",
              "title": "Radioactive",
            },
            Object {
              "id": "58694a0f-3da1-471f-bd96-145571e29sd72aa",
              "percent": "10%",
              "title": "Glass",
            },
          ]
        }
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Concrete
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Wood
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Plastic
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Steel
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Magnetic
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Wool
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Carbon
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Radioactive
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Glass
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginVertical": 1,
                  "opacity": 1,
                  "padding": "1%",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  Concrete
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 32,
                      "padding": 5,
                    }
                  }
                >
                  0
                   %
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 0.5,
                    "flexDirection": "row",
                    "justifyContent": "flex-end",
                    "marginLeft": "3%",
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    -
                  </Text>
                </View>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flex": 1,
                      "justifyContent": "center",
                      "margin": "1%",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 32,
                      }
                    }
                  >
                    +
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "height": 0,
              }
            }
          />
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#27ae60",
          "flex": 0.6,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#2980b9",
            "borderColor": "grey",
            "borderRadius": 30,
            "borderWidth": 3,
            "height": 80,
            "marginLeft": 85,
            "opacity": 1,
            "width": 200,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "bold",
              "marginTop": "10%",
            }
          }
        >
          Total: 
          0
        </Text>
      </View>
    </View>
  </View>
</View>
`;
